main_version/.antlr/PDDLGrammarParser.java
// Generated from c:\Users\admin\Desktop\ДњТы\4.24\4.18\PDDLGrammar.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PDDLGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DOMAIN=1, PROBLEM=2, DEFINE=3, AGENTID=4, CONST=5, TYPE=6, PREDICATE=7, 
		ACTION=8, EVENT=9, EVENTS=10, PLDEGREE=11, EVENTMODEL=12, PARAMETER=13, 
		TERCONDITION=14, PRECONDITION=15, CONSTRAINT=16, RESPONSE=17, OBSERVATION=18, 
		MIN=19, MAX=20, NUMS=21, NORMAL=22, MISER=23, EFFECT=24, OBJECT=25, INC=26, 
		DEC=27, ASSIGN=28, AGENT=29, EITHER=30, OBJS=31, INIT=32, GOAL=33, LB=34, 
		RB=35, LSB=36, RSB=37, COLON=38, QM=39, POINT=40, UL=41, MINUS=42, PLUS=43, 
		MULT=44, DIV=45, MOD=46, EQ=47, NEQ=48, LT=49, LEQ=50, GT=51, GEQ=52, 
		AND=53, OR=54, NOT=55, ONEOF=56, IMPLY=57, FORALL=58, EXISTS=59, WHEN=60, 
		NAME=61, INTEGER=62, VAR=63, FUNSYM=64, WS=65;
	public static final int
		RULE_domain = 0, RULE_objectDefine = 1, RULE_typeDefine = 2, RULE_terconditionDefine = 3, 
		RULE_constraintDefine = 4, RULE_predicate = 5, RULE_types = 6, RULE_actionDefine = 7, 
		RULE_actionSymbol = 8, RULE_typeName = 9, RULE_emptyOrPreGD = 10, RULE_emptyOrEffect = 11, 
		RULE_listName = 12, RULE_listVariable = 13, RULE_oneofDefine = 14, RULE_gd = 15, 
		RULE_termAtomForm = 16, RULE_termLiteral = 17, RULE_constTerm = 18, RULE_term = 19, 
		RULE_effect = 20, RULE_cEffect = 21, RULE_condEffect = 22, RULE_pEffect = 23, 
		RULE_assignop = 24, RULE_problemName = 25, RULE_domainName = 26, RULE_agentDefine = 27, 
		RULE_objectDeclaration = 28, RULE_init = 29, RULE_constTermAtomForm = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"domain", "objectDefine", "typeDefine", "terconditionDefine", "constraintDefine", 
			"predicate", "types", "actionDefine", "actionSymbol", "typeName", "emptyOrPreGD", 
			"emptyOrEffect", "listName", "listVariable", "oneofDefine", "gd", "termAtomForm", 
			"termLiteral", "constTerm", "term", "effect", "cEffect", "condEffect", 
			"pEffect", "assignop", "problemName", "domainName", "agentDefine", "objectDeclaration", 
			"init", "constTermAtomForm"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'domain'", "'problem'", "'define'", "'agentid'", "'constants'", 
			"'type'", "'predicates'", "'action'", "'event'", "'events'", "'pldegree'", 
			"'eventmodel'", "'parameters'", "'tercondition'", "'precondition'", "'constraint'", 
			"'response'", "'observation'", "'min'", "'max'", "'numbers'", "'normal'", 
			"'miser'", "'effect'", "'object'", "'increase'", "'decrease'", "'assign'", 
			"'agent'", "'either'", "'objects'", "'init'", "'goal'", "'('", "')'", 
			"'['", "']'", "':'", "'?'", "'.'", "'_'", "'-'", "'+'", "'*'", "'/'", 
			"'%'", "'='", "'!='", "'<'", "'<='", "'>'", "'>='", "'and'", "'or'", 
			"'not'", "'oneof'", "'imply'", "'forall'", "'exists'", "'when'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DOMAIN", "PROBLEM", "DEFINE", "AGENTID", "CONST", "TYPE", "PREDICATE", 
			"ACTION", "EVENT", "EVENTS", "PLDEGREE", "EVENTMODEL", "PARAMETER", "TERCONDITION", 
			"PRECONDITION", "CONSTRAINT", "RESPONSE", "OBSERVATION", "MIN", "MAX", 
			"NUMS", "NORMAL", "MISER", "EFFECT", "OBJECT", "INC", "DEC", "ASSIGN", 
			"AGENT", "EITHER", "OBJS", "INIT", "GOAL", "LB", "RB", "LSB", "RSB", 
			"COLON", "QM", "POINT", "UL", "MINUS", "PLUS", "MULT", "DIV", "MOD", 
			"EQ", "NEQ", "LT", "LEQ", "GT", "GEQ", "AND", "OR", "NOT", "ONEOF", "IMPLY", 
			"FORALL", "EXISTS", "WHEN", "NAME", "INTEGER", "VAR", "FUNSYM", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PDDLGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PDDLGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class DomainContext extends ParserRuleContext {
		public List<TerminalNode> LB() { return getTokens(PDDLGrammarParser.LB); }
		public TerminalNode LB(int i) {
			return getToken(PDDLGrammarParser.LB, i);
		}
		public TerminalNode DEFINE() { return getToken(PDDLGrammarParser.DEFINE, 0); }
		public TerminalNode DOMAIN() { return getToken(PDDLGrammarParser.DOMAIN, 0); }
		public TerminalNode NAME() { return getToken(PDDLGrammarParser.NAME, 0); }
		public List<TerminalNode> RB() { return getTokens(PDDLGrammarParser.RB); }
		public TerminalNode RB(int i) {
			return getToken(PDDLGrammarParser.RB, i);
		}
		public ObjectDefineContext objectDefine() {
			return getRuleContext(ObjectDefineContext.class,0);
		}
		public TypeDefineContext typeDefine() {
			return getRuleContext(TypeDefineContext.class,0);
		}
		public TerconditionDefineContext terconditionDefine() {
			return getRuleContext(TerconditionDefineContext.class,0);
		}
		public ConstraintDefineContext constraintDefine() {
			return getRuleContext(ConstraintDefineContext.class,0);
		}
		public List<ActionDefineContext> actionDefine() {
			return getRuleContexts(ActionDefineContext.class);
		}
		public ActionDefineContext actionDefine(int i) {
			return getRuleContext(ActionDefineContext.class,i);
		}
		public DomainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_domain; }
	}

	public final DomainContext domain() throws RecognitionException {
		DomainContext _localctx = new DomainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_domain);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(LB);
			setState(63);
			match(DEFINE);
			setState(64);
			match(LB);
			setState(65);
			match(DOMAIN);
			setState(66);
			match(NAME);
			setState(67);
			match(RB);
			setState(68);
			objectDefine();
			setState(69);
			typeDefine();
			setState(70);
			terconditionDefine();
			setState(71);
			constraintDefine();
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LB) {
				{
				{
				setState(72);
				actionDefine();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			match(RB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectDefineContext extends ParserRuleContext {
		public TerminalNode LB() { return getToken(PDDLGrammarParser.LB, 0); }
		public TerminalNode COLON() { return getToken(PDDLGrammarParser.COLON, 0); }
		public TerminalNode OBJS() { return getToken(PDDLGrammarParser.OBJS, 0); }
		public ListVariableContext listVariable() {
			return getRuleContext(ListVariableContext.class,0);
		}
		public TerminalNode RB() { return getToken(PDDLGrammarParser.RB, 0); }
		public ObjectDefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectDefine; }
	}

	public final ObjectDefineContext objectDefine() throws RecognitionException {
		ObjectDefineContext _localctx = new ObjectDefineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_objectDefine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(LB);
			setState(81);
			match(COLON);
			setState(82);
			match(OBJS);
			setState(83);
			listVariable();
			setState(84);
			match(RB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDefineContext extends ParserRuleContext {
		public TerminalNode LB() { return getToken(PDDLGrammarParser.LB, 0); }
		public TerminalNode COLON() { return getToken(PDDLGrammarParser.COLON, 0); }
		public TerminalNode TYPE() { return getToken(PDDLGrammarParser.TYPE, 0); }
		public TypeNameContext typeName() {
			return getRuleContext(TypeNameContext.class,0);
		}
		public TerminalNode RB() { return getToken(PDDLGrammarParser.RB, 0); }
		public TypeDefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDefine; }
	}

	public final TypeDefineContext typeDefine() throws RecognitionException {
		TypeDefineContext _localctx = new TypeDefineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_typeDefine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(LB);
			setState(87);
			match(COLON);
			setState(88);
			match(TYPE);
			setState(89);
			typeName();
			setState(90);
			match(RB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerconditionDefineContext extends ParserRuleContext {
		public TerminalNode LB() { return getToken(PDDLGrammarParser.LB, 0); }
		public TerminalNode COLON() { return getToken(PDDLGrammarParser.COLON, 0); }
		public TerminalNode TERCONDITION() { return getToken(PDDLGrammarParser.TERCONDITION, 0); }
		public EmptyOrPreGDContext emptyOrPreGD() {
			return getRuleContext(EmptyOrPreGDContext.class,0);
		}
		public TerminalNode RB() { return getToken(PDDLGrammarParser.RB, 0); }
		public TerconditionDefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terconditionDefine; }
	}

	public final TerconditionDefineContext terconditionDefine() throws RecognitionException {
		TerconditionDefineContext _localctx = new TerconditionDefineContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_terconditionDefine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(LB);
			setState(93);
			match(COLON);
			setState(94);
			match(TERCONDITION);
			setState(95);
			emptyOrPreGD();
			setState(96);
			match(RB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstraintDefineContext extends ParserRuleContext {
		public TerminalNode LB() { return getToken(PDDLGrammarParser.LB, 0); }
		public TerminalNode COLON() { return getToken(PDDLGrammarParser.COLON, 0); }
		public TerminalNode CONSTRAINT() { return getToken(PDDLGrammarParser.CONSTRAINT, 0); }
		public EmptyOrPreGDContext emptyOrPreGD() {
			return getRuleContext(EmptyOrPreGDContext.class,0);
		}
		public TerminalNode RB() { return getToken(PDDLGrammarParser.RB, 0); }
		public ConstraintDefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraintDefine; }
	}

	public final ConstraintDefineContext constraintDefine() throws RecognitionException {
		ConstraintDefineContext _localctx = new ConstraintDefineContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constraintDefine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(LB);
			setState(99);
			match(COLON);
			setState(100);
			match(CONSTRAINT);
			setState(101);
			emptyOrPreGD();
			setState(102);
			match(RB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredicateContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(PDDLGrammarParser.NAME, 0); }
		public PredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicate; }
	}

	public final PredicateContext predicate() throws RecognitionException {
		PredicateContext _localctx = new PredicateContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_predicate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypesContext extends ParserRuleContext {
		public TerminalNode OBJECT() { return getToken(PDDLGrammarParser.OBJECT, 0); }
		public TerminalNode AGENT() { return getToken(PDDLGrammarParser.AGENT, 0); }
		public TerminalNode NAME() { return getToken(PDDLGrammarParser.NAME, 0); }
		public TypesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_types; }
	}

	public final TypesContext types() throws RecognitionException {
		TypesContext _localctx = new TypesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_types);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OBJECT) | (1L << AGENT) | (1L << NAME))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionDefineContext extends ParserRuleContext {
		public List<TerminalNode> LB() { return getTokens(PDDLGrammarParser.LB); }
		public TerminalNode LB(int i) {
			return getToken(PDDLGrammarParser.LB, i);
		}
		public List<TerminalNode> COLON() { return getTokens(PDDLGrammarParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(PDDLGrammarParser.COLON, i);
		}
		public TerminalNode ACTION() { return getToken(PDDLGrammarParser.ACTION, 0); }
		public ActionSymbolContext actionSymbol() {
			return getRuleContext(ActionSymbolContext.class,0);
		}
		public List<TerminalNode> RB() { return getTokens(PDDLGrammarParser.RB); }
		public TerminalNode RB(int i) {
			return getToken(PDDLGrammarParser.RB, i);
		}
		public TerminalNode PARAMETER() { return getToken(PDDLGrammarParser.PARAMETER, 0); }
		public ListVariableContext listVariable() {
			return getRuleContext(ListVariableContext.class,0);
		}
		public TerminalNode PRECONDITION() { return getToken(PDDLGrammarParser.PRECONDITION, 0); }
		public EmptyOrPreGDContext emptyOrPreGD() {
			return getRuleContext(EmptyOrPreGDContext.class,0);
		}
		public TerminalNode EFFECT() { return getToken(PDDLGrammarParser.EFFECT, 0); }
		public EmptyOrEffectContext emptyOrEffect() {
			return getRuleContext(EmptyOrEffectContext.class,0);
		}
		public ActionDefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actionDefine; }
	}

	public final ActionDefineContext actionDefine() throws RecognitionException {
		ActionDefineContext _localctx = new ActionDefineContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_actionDefine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(LB);
			setState(109);
			match(COLON);
			setState(110);
			match(ACTION);
			setState(111);
			actionSymbol();
			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(112);
				match(COLON);
				setState(113);
				match(PARAMETER);
				setState(114);
				match(LB);
				setState(115);
				listVariable();
				setState(116);
				match(RB);
				}
				break;
			}
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(120);
				match(COLON);
				setState(121);
				match(PRECONDITION);
				setState(122);
				emptyOrPreGD();
				}
				break;
			}
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(125);
				match(COLON);
				setState(126);
				match(EFFECT);
				setState(127);
				emptyOrEffect();
				}
			}

			setState(130);
			match(RB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionSymbolContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(PDDLGrammarParser.NAME, 0); }
		public ActionSymbolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actionSymbol; }
	}

	public final ActionSymbolContext actionSymbol() throws RecognitionException {
		ActionSymbolContext _localctx = new ActionSymbolContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_actionSymbol);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeNameContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(PDDLGrammarParser.NAME, 0); }
		public TypeNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeName; }
	}

	public final TypeNameContext typeName() throws RecognitionException {
		TypeNameContext _localctx = new TypeNameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_typeName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EmptyOrPreGDContext extends ParserRuleContext {
		public EmptyOrPreGDContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_emptyOrPreGD; }
	 
		public EmptyOrPreGDContext() { }
		public void copyFrom(EmptyOrPreGDContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PreGDBracketContext extends EmptyOrPreGDContext {
		public TerminalNode LB() { return getToken(PDDLGrammarParser.LB, 0); }
		public TerminalNode RB() { return getToken(PDDLGrammarParser.RB, 0); }
		public PreGDBracketContext(EmptyOrPreGDContext ctx) { copyFrom(ctx); }
	}
	public static class IsGdContext extends EmptyOrPreGDContext {
		public GdContext gd() {
			return getRuleContext(GdContext.class,0);
		}
		public IsGdContext(EmptyOrPreGDContext ctx) { copyFrom(ctx); }
	}

	public final EmptyOrPreGDContext emptyOrPreGD() throws RecognitionException {
		EmptyOrPreGDContext _localctx = new EmptyOrPreGDContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_emptyOrPreGD);
		try {
			setState(139);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new IsGdContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				gd();
				}
				break;
			case 2:
				_localctx = new PreGDBracketContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				match(LB);
				setState(138);
				match(RB);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EmptyOrEffectContext extends ParserRuleContext {
		public EmptyOrEffectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_emptyOrEffect; }
	 
		public EmptyOrEffectContext() { }
		public void copyFrom(EmptyOrEffectContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IsEffectContext extends EmptyOrEffectContext {
		public EffectContext effect() {
			return getRuleContext(EffectContext.class,0);
		}
		public IsEffectContext(EmptyOrEffectContext ctx) { copyFrom(ctx); }
	}
	public static class EffectBracketContext extends EmptyOrEffectContext {
		public TerminalNode LB() { return getToken(PDDLGrammarParser.LB, 0); }
		public TerminalNode RB() { return getToken(PDDLGrammarParser.RB, 0); }
		public EffectBracketContext(EmptyOrEffectContext ctx) { copyFrom(ctx); }
	}

	public final EmptyOrEffectContext emptyOrEffect() throws RecognitionException {
		EmptyOrEffectContext _localctx = new EmptyOrEffectContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_emptyOrEffect);
		try {
			setState(144);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new IsEffectContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				effect();
				}
				break;
			case 2:
				_localctx = new EffectBracketContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				match(LB);
				setState(143);
				match(RB);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListNameContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(PDDLGrammarParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(PDDLGrammarParser.NAME, i);
		}
		public TerminalNode MINUS() { return getToken(PDDLGrammarParser.MINUS, 0); }
		public TypesContext types() {
			return getRuleContext(TypesContext.class,0);
		}
		public ListNameContext listName() {
			return getRuleContext(ListNameContext.class,0);
		}
		public ListNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listName; }
	}

	public final ListNameContext listName() throws RecognitionException {
		ListNameContext _localctx = new ListNameContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_listName);
		int _la;
		try {
			setState(161);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NAME) {
					{
					{
					setState(146);
					match(NAME);
					}
					}
					setState(151);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(153); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(152);
					match(NAME);
					}
					}
					setState(155); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NAME );
				setState(157);
				match(MINUS);
				setState(158);
				types();
				setState(159);
				listName();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListVariableContext extends ParserRuleContext {
		public List<TerminalNode> VAR() { return getTokens(PDDLGrammarParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(PDDLGrammarParser.VAR, i);
		}
		public TerminalNode MINUS() { return getToken(PDDLGrammarParser.MINUS, 0); }
		public TypesContext types() {
			return getRuleContext(TypesContext.class,0);
		}
		public ListVariableContext listVariable() {
			return getRuleContext(ListVariableContext.class,0);
		}
		public ListVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listVariable; }
	}
